--- a/trunk/README
+++ b/trunk/README
@@ -248,7 +248,7 @@ Poing is Copyright 2000 by Rocco Caputo.  All rights are reserved.
 Poing is free software.  You may use, modify and/or distribute it
 under the same terms as Perl itself.
 
-The author may be reached as "Rocco Caputo" <troc+poing@netrus.net>.
+The author may be reached as "Rocco Caputo" <rcaputo@cpan.org>.
 
 -------------------------------------------------------------------------------
 END OF FILE
